# CppModules

./: .gitignore  CMakeLists.txt  Makefile  compile.sh  main.cpp
mod/: module.cpp
